QC-145- Cleaning Eisia script

--- a/eSourcePlatform/Eisia/Eisia.csproj
+++ b/eSourcePlatform/Eisia/Eisia.csproj
@@ -336,6 +336,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>40174340-b14b-4ee7-8df5-58fdb94774ac</id>
     </Content>
+    <Content Include="EisiaAuthentication.csv">
+      <Link>EisiaAuthentication.csv</Link>
+      <BoundTo>92686ce6-e59c-4203-b1ae-0f43b48c3d04</BoundTo>
+      <DependentUpon>EisiaSmokeTest.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>97a1684a-0333-4dd7-b3dc-037f062a1b9a</id>
+    </Content>
     <None Include="EisiaRepository.rximg">
       <BoundTo>d3ba5b8e-5c6a-41f6-bc88-4d11fabfb938</BoundTo>
       <DependentUpon>EisiaRepository.rxrep</DependentUpon>
@@ -359,6 +366,13 @@
       <id>dd0d3013-ecee-4283-b402-e0a87ccd7a78</id>
       <recordtableid>ef258eb9-653e-42c5-9800-82552a0d53b2</recordtableid>
     </None>
+    <Content Include="JSON.csv">
+      <Link>JSON.csv</Link>
+      <BoundTo>92686ce6-e59c-4203-b1ae-0f43b48c3d04</BoundTo>
+      <DependentUpon>EisiaSmokeTest.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>95f68f8c-924a-4dd8-837b-7238c10e4e78</id>
+    </Content>
     <None Include="NewCaptureworkflowstateID.rxrec">
       <BoundTo>d3ba5b8e-5c6a-41f6-bc88-4d11fabfb938</BoundTo>
       <id>47ba8e68-3331-4c87-8ea4-ec13226fbbe6</id>
@@ -414,6 +428,13 @@
       <id>12dddbbb-39ad-4d40-bc8d-3a58181317b5</id>
       <recordtableid>64cee487-0f3b-4427-8ac6-746384f3aa0b</recordtableid>
     </None>
+    <Content Include="TenantConnector.csv">
+      <Link>TenantConnector.csv</Link>
+      <BoundTo>92686ce6-e59c-4203-b1ae-0f43b48c3d04</BoundTo>
+      <DependentUpon>EisiaSmokeTest.rxtst</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <id>7cdc7c97-ff49-45b6-ae7e-42a2b9d50985</id>
+    </Content>
     <None Include="workflowLogs.rxrec">
       <BoundTo>d3ba5b8e-5c6a-41f6-bc88-4d11fabfb938</BoundTo>
       <id>362b2a4a-9e01-4820-b35a-630c39c373aa</id>
@@ -425,7 +446,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <id>40f10745-5699-40db-9bec-20a5aaea7e47</id>
     </Content>
-    <Content Include="Eisia.rxtst">
+    <Content Include="EisiaSmokeTest.rxtst">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <id>92686ce6-e59c-4203-b1ae-0f43b48c3d04</id>
     </Content>
