QC-145: Masking PW

--- a/eSourcePlatform/Eisia/Eisia.csproj
+++ b/eSourcePlatform/Eisia/Eisia.csproj
@@ -13,6 +13,7 @@
     <RanorexTargetsPath>$(MSBuildProgramFiles32)\MSBuild\Ranorex$(RanorexVersion)\Ranorex.MSBuild.Targets</RanorexTargetsPath>
     <projectdefaultrepository>d3ba5b8e-5c6a-41f6-bc88-4d11fabfb938</projectdefaultrepository>
     <StartAction>Project</StartAction>
+    <NoWin32Manifest>False</NoWin32Manifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Platform)' == 'x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -25,6 +26,7 @@
     <Optimize>False</Optimize>
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <StartArguments>&gt; c:\temp\Console2File.txt</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>bin\Release\</OutputPath>
