QC-153: 1. Rename the current "Eisia" project to "Eisai" : DONE
2. Keep the smart folders separate for Smoke and Regression under the Eisai test suit. DONE

3. Put current recording modules in the folders it relates to. DONE

4. Remove extra "EsiaProject" folder in eSourcePlatform folder: DONE

5. Update file directory for engine.dll reference within Eisai project to a relative directory so it works for everyone who pulls from BitBucket. Hint path should be :::..\.._assets\engine\bin\Debug\engine.dll : DONE

--- a/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
+++ b/eSourcePlatform/eSourcePlatform/eSourcePlatform.csproj
@@ -52,6 +52,7 @@
     <Reference Include="engine">
       <HintPath>..\..\_assets\engine\bin\$(Configuration)\engine.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Build.Engine" />
     <Reference Include="Microsoft.CSharp">
     </Reference>
     <Reference Include="Newtonsoft.Json">
